# skills

./: .gitignore  .sonar.env  README.md  SKILL.md  audit.py  clean_code_rules.md  clean_code_rules.yml  fix.py  git.py  main.py  pyproject.toml  run.py  semantic_gate.py  sitecustomize.py  sonar.py
audit/: __init__.py  __main__.py  (+6 more)
clean-code/: .gitignore  README.md  SKILL.md  clean_code_rules.yml  git.py  pyproject.toml  run.py
clean-code/audit/: __init__.py  __main__.py  auditor.py  checks_ast.py  checks_text.py  files.py  fix.py
clean-code/cli/: env.py  helpers.py  runner.py  scope.py
clean-code/pytest_gate/: gate.py
clean-code/semantic/: __init__.py  ledger.py  scaffold.py  utils.py  validate.py  validate_index.py
clean-code/sonar/: __init__.py  api.py  gate.py  gate_check.py  http.py  props.py  scan.py
clean-code/tests/: test_audit_auditor.py  test_audit_checks_ast.py  test_audit_files.py  test_audit_fix.py  test_audit_main.py  test_checks_text_regexes.py  test_cli_env.py  test_cli_gates.py  test_cli_helpers.py  test_cli_scope.py  test_git_uncommitted.py  test_pytest_gate.py  test_run_cli.py  test_runner.py  test_semantic_empty_files.py  test_semantic_gate_extra.py  test_semantic_imports.py  test_semantic_scaffold_extra.py  test_sonar_api.py  test_sonar_env_normalization.py  test_sonar_gate.py  test_sonar_gate_check.py  test_sonar_gate_error_handling.py  test_sonar_http.py  test_sonar_props_normalization.py  test_sonar_report_task_discovery.py  test_sonar_s138_filter.py  test_sonar_scan.py  test_vulture_gate.py
clean-code/typecheck/: __init__.py  gate.py
(+55 files in other folders)
