[project]
name = "clean-code"
version = "0.1.0"
description = "PR code cleanup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "pyright>=1.1.408",
    "pysonar>=1.3.0.4086",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.14",
    "truststore>=0.10.4",
    "vulture>=2.14",
]